--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -1,26 +1,27 @@
 .blogHeader {
     width: 100%;
+    height: 100vh;
     background-image: url("../assets/blog-header.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: $textColor;
-    height: 100vh;
-    // display: flex;
+    
+
     
     .mainWrapper {
-        display: flex;
-        // flex-direction: column;
-        height: 100%;
         max-width: 90%;
-
+        height: 100%;
+        display: flex;
+        
+        
         .blogContent {
             width: 50%;
+            height: 100%;
             display: flex;
             flex-direction: column;
-            height: 100%;
+            
 
             .blogHeaderNav {
-                // border: 2px solid yellow;
                 height: 20%;
                 display: flex;
                 align-items: center;
@@ -34,34 +35,23 @@
                 
 
                 li a {
-                   color: $textColor;
-                   font-family: 'Roboto', sans-serif;
-                   font-size: 20px;
-                   line-height: 29px;
-                   letter-spacing: 1px;
+                   @include listLinks;
                 }
 
                 li a:hover {
                     padding-bottom: 5px;
                     border-bottom: 2px solid $accentColor;
                 }
-                
             }
 
             .blogHeaderTitle {
-                // border: 2px solid yellow;
                 height: 80%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
 
                 h1 {
-                    width: 100%;
-                    font-size: 121.5px;
-                    line-height: 125.6px;
-                    // border: 2px solid red;
-                    font-family: 'Walter Turncoat', cursive;
-                    padding-top: 5%;
+                    @include secondaryPagesH1;
                 }
             }
         }
@@ -70,40 +60,32 @@
 
 .blogSection {
     width: 100%;
-    background-color: $primaryColor;
-    padding: 6% 0 1% 0;
-    color: $textColor;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
-    max-width: 100%;
-
-    // .mainWrapper {
-    //     display: flex;
-    //     justify-content: space-between;
-    //     max-width: 100%;
+    padding: 6% 0 1% 0;
+    background-color: $primaryColor;
+    color: $textColor;
 
         .blogAside {
             width: 28%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            background-color: $secondaryColor;
-            // margin-bottom: 15%;
             margin-left: 5%;
             padding-bottom: 1%;
-
+            background-color: $secondaryColor;
+            
             .asideImg {
-                margin-left: -18%;
-                margin-right: 4.5%;
                 margin-top: -5%;
+                margin-right: 4.5%;
+                margin-left: -18%;
             }
 
             .asideText {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                // align-items: space-between;
-                
                 
                 .asideMission,
                 .recentPosts {
@@ -121,22 +103,20 @@
                 }
 
                 li {
-                    // list-style-type: circle;
-                    // list-style-position: inside;
-                    padding-left: 7%;
                     position: relative;
+                    padding-left: 7%;
+                    
                 }
 
                 li::before {
                     content: "";
                     width: 5px;
                     height: 5px;
-                    border-radius: 50%;
-                    background-color: $accentColor;
-                    display: block;
                     position: absolute;
                     top: 40%;
                     left: 0;
+                    border-radius: 50%;
+                    background-color: $accentColor;
                 }
             }
         }
@@ -148,28 +128,21 @@
             margin-top: -17%;
 
             .activitiesImg {
-                box-shadow: -15px 15px 0 1px rgb(8, 253, 237);
-                // margin-right: -9%;
-                // margin-right: 0%;
                 margin-left: 16px;
-                // transform: translate(3.4%)
+                box-shadow: -15px 15px 0 1px rgb(8, 253, 237);
             }
 
             .activitiesText {
                 padding: 5% 5% 10% 10%;
                 border-left: 5px solid $accentColor;
                 border-bottom: 5px solid $accentColor;
-                // padding-right: 5%;
-                // margin-left: 1.6%;
 
                 * {
                     margin-bottom: 3%;
                 }
 
                 h2 {
-                    font-family: 'Walter Turncoat', cursive;
-                    font-size: 80px;
-                    font-weight: 100;
+                    @include blogH2Styles;
                 }
 
                 p {
@@ -177,14 +150,12 @@
                 } 
             }
         }
-    // }
 }
 
 .commentsSection {
     width: 100%;
     display: flex;
     flex-direction: column;
-    // justify-content: flex-end;
     align-items: flex-end;
     background-color: $primaryColor;
 
@@ -192,22 +163,17 @@
         width: 60%;
         display: flex;
         flex-direction: column;
-        // border: 2px solid red;
         padding: 0 4% 5% 7.5%;
         color: $textColor;
 
         h2 {
-            font-family: 'Walter Turncoat', cursive;
-            font-size: 80px;
-            font-weight: 100;
+            @include blogH2Styles;
             margin-bottom: 2%;
         }
 
         .commentItem {
             display: flex;
             justify-content: space-between;
-            // border: 2px solid yellow;
-            
 
             .commentImg {
                 width: 13%; 
@@ -219,19 +185,17 @@
                 width: 81%;
 
                 h3 {
+                    margin-bottom: 1%;
                     font-family: 'Roboto', sans-serif;
                     font-size: 24px;
                     line-height: 28px;
                     font-style: italic;
                     font-weight: bold;
-                    margin-bottom: 1%;
-                    
                 }
                 
                 p {
                     @include pStyles;
                 }
-
             }
         }
 
@@ -241,13 +205,12 @@
     }
 
     form {
+        width: 50%;
         display: flex;
         flex-direction: column;
-        width: 50%;
         margin-right: 4%;
         margin-bottom: 6%;
         
-
         .formFields {
             display: flex;
             flex-direction: row;
@@ -255,21 +218,23 @@
             margin-bottom: 5%;
 
             input[type="text"] {
+                @include pStyles;
                 width: 45%;
                 height: 50px;
                 border: none;
                 background-color: $primaryColor;
                 border-bottom: 2px solid $accentColor;
-                @include pStyles;
+                
             }
 
             input[type="email"] {
+                @include pStyles;
                 width: 45%;
                 height: 50px;
                 border: none;
                 background-color: $primaryColor;
                 border-bottom: 2px solid $accentColor;
-                @include pStyles;
+                
             }
 
             input::placeholder {
@@ -279,14 +244,14 @@
         }
 
         textarea {
-            border: none;
-            background-color: $primaryColor;
-            border: 2px solid $accentColor;
             @include pStyles;
             margin-bottom: 5%;
-            resize: none;
-            padding-left: 2%;
             padding-top: 2%;
+            padding-left: 2%;
+            border: none;
+            background-color: $primaryColor;
+            border: 2px solid $accentColor;            
+            resize: none;
         }
 
         textarea::placeholder {
@@ -301,16 +266,19 @@
 }
 
 footer {
+    @include pStyles;
     width: 100%;
+    padding: 10px 0;
     background-color: $tertiaryColor;
     color: $textColor;
     text-align: center;
-    @include pStyles;
-    padding: 10px 0;
 }
 
-@media (max-width: 900px) {
+/***********************************************************
+		    		  MEDIA QUERIES
+***********************************************************/
 
+@media (max-width: 900px) {
     .blogHeader .mainWrapper .blogContent .blogHeaderNav {
         ul {
             width: 100%;
@@ -318,10 +286,9 @@ footer {
     }
 
     .blogSection {
-        padding: 0;
         flex-direction: column;
-
-
+        padding: 0;
+        
             .blogAside {
                 width: 100%;
                 flex-direction: row;
@@ -368,13 +335,11 @@ footer {
                     padding: initial;
                     padding: 5% 10%;
                     border: none;
-  
                 }
             }
     }
 
     .commentsSection {
-
         .commentsContainer {
             width: 100%;
             padding: initial;
@@ -394,7 +359,6 @@ footer {
 }
 
 @media (max-width: 768px) {
-
     .blogHeader .mainWrapper 
     .blogContent {
         width: 100%;    
@@ -407,24 +371,20 @@ footer {
 }
 
 @media (max-width: 600px) {
-
     .blogSection {
-    
         .blogAside {
-
             .asideImg {
                 display: none;
             }
 
             .asideText {
                 width: 100%;
-                // text-align: center;
+
                 h3 {
                     text-align: center;
                     margin-bottom: 3%;
                 }
             }
-        
         }
 
         .activities .activitiesText {
@@ -437,7 +397,6 @@ footer {
     .commentsSection .commentsContainer h2 {
         font-size: 50px;
     }
-
 }
 
 
@@ -447,10 +406,8 @@ footer {
                     ul {
                         width: 100%;
                         flex-wrap: wrap;
-                        // justify-content: center;
 
                         li {
-                            // display: block;
                             width: 50%;
                             text-align: center;
                             margin-top: 5%;
@@ -460,7 +417,6 @@ footer {
             }
     .commentsSection {
         form {
-            // box-shadow: none;
 
             .formFields {
                 flex-direction: column;
