--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -1,41 +1,34 @@
 .mainHeader {
     width: 100%;
+    height: 100vh;
     background-image: url("../assets/home-header.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: $textColor;
-    height: 100vh;
-    // display: flex;
     
     .mainWrapper {
-        display: flex;
-        // flex-direction: column;
         height: 100%;
+        display: flex;
 
         .headerContent {
             width: 50%;
+            height: 100%;
             display: flex;
             flex-direction: column;
-            height: 100%;
-
+            
             .headerNav {
-                // border: 2px solid yellow;
                 height: 20%;
                 display: flex;
                 align-items: center;
                 padding-top: 5%;
                 
                 ul {
-                    width: 75%;
+                width: 75%;
                 display: flex;
                 justify-content: space-between;
 
                 li a {
-                   color: $textColor;
-                   font-family: 'Roboto', sans-serif;
-                   font-size: 20px;
-                   line-height: 29px;
-                   letter-spacing: 1px;
+                   @include listLinks;
                 }
 
                     li a:hover {
@@ -45,25 +38,15 @@
                 }
             }
 
-            // .headerNav ul {
-                
-                
-
-                
-            // }
-
             .headerTitle {
-                // border: 2px solid yellow;
                 height: 80%;
                 display: flex;
                 align-items: center;
-                // position: relative;
                 z-index: 5;
 
                 h1 {
                     width: 100%;
                     font-size: 145.2px;
-                    // border: 2px solid red;
                     font-family: 'Walter Turncoat', cursive;
                     padding-top: 30%;
                 }
@@ -71,16 +54,26 @@
         }
 
         .headerImg {
-            // width: auto;
-            // margin-top: 20%;
-            // margin-right: -12.5%;
             transform: translate(20%, 50%) scale(1.1);
         }
     }
 }
 
-@media (max-width: 1100px) {
+/***********************************************************
+		    		  MEDIA QUERIES
+***********************************************************/
 
+@media (min-width: 1600px) {
+    .mainHeader {
+        .mainWrapper {
+            .headerImg {
+                transform: translate(19%, 45%) scale(1.1);
+            }
+        }
+    }
+}
+
+@media (max-width: 1100px) {
     .mainHeader {
         .mainWrapper {
             .headerContent {
@@ -129,8 +122,8 @@
         .mainWrapper {
             .headerContent {
                 .headerTitle {
-                    // justify-content: flex-start;
                     align-items: flex-start;
+
                     h1 {
                         padding-top: 20%;
                         padding-bottom: 0;
@@ -148,37 +141,21 @@
                     ul {
                         width: 100%;
                         flex-wrap: wrap;
-                        // justify-content: center;
 
                         li {
-                            // display: block;
                             width: 50%;
-                            text-align: center;
                             margin-top: 5%;
+                            text-align: center;
                         }
                     }
                 }
                 .headerTitle {
-                    // justify-content: flex-start;
                     align-items: flex-start;
+
                     h1 {
                         padding-top: 40%;
-                        // padding-bottom: 0;
                         font-size: 50px;
                     }
                 }
             }
 }
-
-// @media (max-width: 400px) {
-// .mainHeader {
-//     .mainWrapper {
-
-//         .headerContent
-//     }
-
-// }
-                
-            
-//     }
-// }
