--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,22 +23,20 @@ li {
 
 img {
     width: 100%;
-    // height: 100%;
     object-fit: contain;
     display: block;
 }
 
 button {
+    padding: 10px 15px;
     border: none;
     background-color: $accentColor;
+    color: $secondaryColor;
     font-family: 'Walter Turncoat', cursive;
     font-size: 25.4px;
     line-height: 41.6px;
     text-align: center;
-    padding: 10px 15px;
-    // width: 34%;
     white-space: nowrap;
-    color: $secondaryColor;
 }
 
 .mainWrapper {
@@ -46,14 +44,15 @@ button {
     margin: 0 auto;
 }
 
-// @media (min-width: 1600px) {
-//     .mainWrapper {
-//       max-width: 1600px;
-//     }
+
 
 
 // challenge pushing image out of container. Solved by removing width: 50% from its parent. width 50% for its sibling is enough.
 
 // challenge resizing the offset images, especially the header
 
+// challenge having border line up with the box shadow. have the margin offset by the width of the box shadow
+
 // change assets names
+
+// win learning about icon stacking
