changed asset names

--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -1,7 +1,7 @@
 .blogHeader {
     width: 100%;
     height: 100vh;
-    background-image: url("../assets/blog-header.jpg");
+    background-image: url("../assets/blogHeader.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: $textColor;
