--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -1,7 +1,7 @@
 .mainHeader {
     width: 100%;
     height: 100vh;
-    background-image: url("../assets/home-header.jpg");
+    background-image: url("../assets/homeHeader.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: $textColor;
