--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -1,7 +1,7 @@
 .contactHeader {
     width: 100%;
     height: 100vh;
-    background-image: url("../assets/contact-header.jpg");
+    background-image: url("../assets/contactHeader.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: $textColor;
@@ -305,7 +305,7 @@ footer {
 
         .contactForm {
             width: 85%;
-            
+
             form {
                 box-shadow: none;
 
